CHANGES.txt - 03/14/2006
------------------------

CHANGES IN HTMLDOC v1.8.26

    BUG FIXES

	- Images in Level 2/3 PostScript output did not work on
	  some printers (PR #6000)
	- The GUI did not use the first page header (PR #5978)


CHANGES IN HTMLDOC v1.8.25

    NEW FEATURES

	- Added "--overflow" and "--no-overflow" command-line
	  options to show or hide the content-too-large errors;
	  the default is "--no-overflow".
	- Added "--header1" command-line option and "HEADER1"
	  page comments to set the page header for the first page
	  of each chapter.
	- Added "timing" and "remotebytes" debug data generation.
	- Added DejaVu font collection to better support Cyrillic
	  and Greek text; the new fonts are available under the
	  generic names "monospace", "sans", and "serif".
	- Added "--referer" command-line option and corresponding
	  CGI-mode support to pass Referer: information in HTTP
	  requests (STR #91)

    CHANGES:

	- On Windows, HTMLDOC now logs CGI mode errors to a file
	  called "htmldoc.log" in the Windows temporary
	  directory.
	- HTMLDOC no longer uses Base-85 encoding for image data
	  when producing Level 2 and 3 PostScript output. It
	  appears that many printers and PostScript interpreters
	  cannot properly decode this data when the original
	  image data is not a multiple of 8 bits.
	- HTMLDOC now renders STRONG elements in boldface instead
	  of bold-italic to match the W3C recommendations.
	- HTMLDOC now automatically inserts a TR element before a
	  TD or TH element as needed to improve web site
	  compatibility; this also triggers a HTML error in
	  --strict mode.

    BUG FIXES

	- "$HFIMAGEn" didn't work in a header/footer string.
	- HTMLDOC could crash when rendering a table.
	- Book files were not used in CGI mode (STR #69)
	- Cookies were not sent in HTTP requests (STR #71)
	- Table cells were not aligned properly when the ROWSPAN
	  attribute was set to 1 (STR #73)
	- HTMLDOC crashed when rendering unresolved hyperlinks in